Update README.md
Updated the README to have a higher amount of memory when installing. Should fix issues I had when attempting to install on a Mac.